# django-smooth

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  test_settings.py
smooth/: apps.py  models.py
smooth/static/: smooth-core.js
