[metadata]
name = django-smooth
version = 0.1
description = Hybrid solution for dynamic UX in Django without JS.
long_description = file: README.md
url = https://github.com/michaldev/django-smooth
author = Michal Rosiak
author_email = michal.rosiak.dev@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
    pydantic >= 1.8.2